tests/data/pml/parse_test_6.pml
# Break outside of loop
#
BEGIN {
	while (1) {
		while (tcp) {
			while (ip) {
				continue;
			}
			break;
		} 
		continue;
	}

	break;
}
